=== HEAD

* Support :index_type=>:gist option to create GIST full text indexes on PostgreSQL (jeremyevans)

* Add Postgres::ArrayOp#replace for the array_replace function added in PostgreSQL 9.3 (jeremyevans)

* Add Postgres::ArrayOp#remove for the array_remove function added in PostgreSQL 9.3 (jeremyevans)

* Add Postgres::ArrayOp#hstore for creating hstores from arrays (jeremyevans)

* Make Postgres::ArrayOp#[] return ArrayOp if given a range (jeremyevans)

* Ensure that CHECK constraints are surrounded with parentheses (jeremyevans)

* Ensure Dataset#unbind returned variable hash uses symbol keys (jeremyevans)

* Add pg_array_associations plugin, for associations based on PostgreSQL arrays containing foreign keys (jeremyevans)

* Add Sequel.deep_qualify, for easily doing a deep qualification (jeremyevans)

* Enable use of window functions for limited eager loading by default (jeremyevans)

* Handle offsets correctly when eager loading one_to_one associations (jeremyevans)

* Raise exception for infinite and NaN floats on MySQL (jeremyevans) (#677)

* Make dataset string literalization that requires database connection use dataset's chosen server (jeremyevans)

* Make sure an offset without a limit is handled correctly when eager loading (jeremyevans)

* Allow providing ranges as subscripts for array[start:end] (jeremyevans)

* Prepare one_to_one associations in the prepared_statements_associations plugin (jeremyevans)

* Use prepared statements when the association has :conditions in the prepared_statements_associations plugin (jeremyevans)

* Fix prepared statement usage in some additional cases in the prepared_statements_associations plugin (jeremyevans)

* Hex escape blob input on MySQL (jeremyevans)

* Handle more disconnect errors when using the postgres adapter with the postgres-pr driver (jeremyevans)

* Model#setter_methods private method now accepts 1 argument instead of 2 (jeremyevans)
